--- a/index.html
+++ b/index.html
@@ -49,7 +49,19 @@
     </header>
 
     <main>
-
+        <div class="features">
+            <div class="feature-images">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+            <div class="feature-content">
+                <h2 class="section-title">Quick list <strong>of Our</strong> <span>Features</span></h2>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+        </div>
     </main>
 
     <footer>
