only new section and media query required

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Font Linked Below -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <!-- Website title below -->
     <title>G3 Architects</title>
 </head>
@@ -21,10 +21,10 @@
 
     <header>
 
-        <!-- Navbar section blow -->
+        <!-- Navbar section below -->
 
         <nav class="navbar">
-            <h2 class="nav-title">G3 Architects</h2>
+            <h2 class="section-title">G3 Architects</h2>
             <ul class="menu-list">
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
@@ -36,8 +36,8 @@
         <!-- Bannar section below -->
 
         <section class="banner">
-            <div class="section-content">
-                <h1 class="section-title">Brand New Group of Architects</h1>
+            <div class="banner-section-content">
+                <h1 class="banner-section-title">Brand New Group of Architects</h1>
 
                 <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
                     majority have suffered alteration in some form, by injected humour, or randomised words which don't
@@ -48,8 +48,12 @@
         </section>
     </header>
 
+    <!-- Main Section Starts Here -->
+
     <main>
-        <div class="features">
+
+        <!-- Features section -->
+        <section class="features">
             <div class="feature-images">
                 <img src="images/team1.png" alt="">
                 <img src="images/team2.png" alt="">
@@ -58,14 +62,139 @@
             </div>
             <div class="feature-content">
                 <h2 class="section-title">Quick list <strong>of Our</strong> <span>Features</span></h2>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
-        </div>
+        </section>
+
+        <!-- Feature list section below-->
+
+        <section class="feature-list-section">
+            <div class="feature-list">
+                <div class="feature-list-content">
+                    <div class="feature-list-heading">
+                        <div class="vertical-line"></div>
+                        <h2 class="section-title">Features you will love & enjoy</h2>
+                    </div>
+                    <p class="section-description">There are many variations of passages of Lorem Ipsum available, but
+                        the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't
+                        look
+                        even</p>
+                    <div class="feature-container">
+                        <div class="feature-box">
+                            <p class="section-subtitle">Dexktop & Mobile Version</p>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                        <div class="feature-box">
+                            <p class="section-subtitle">Drag & Drop Builder</p>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                        <div class="feature-box">
+                            <p class="section-subtitle">Awesome Modern Design</p>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                        <div class="feature-box">
+                            <p class="section-subtitle">Super Easy to Edit</p>
+                            <p class="section-description">There are many variations of passages of Lorem Ipsum
+                                available,
+                                but
+                                the majority have suffered alteration in some form, by injected humour, or
+                                randomised...........
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <img src="images/architect.png" alt="" class="feature-list-image">
+            </div>        
+            <div class="experience-container">
+                <div class="experience-content">
+                    <h2 class="experience-title">10+Year</h2>
+                    <p class="experience-description">Experience</p>
+                </div>
+            </div>  
+        </section>
+        
+        <!-- Some-Facts section below -->
+
+        <section class="facts-section">
+            <div class="facts-section-content">
+                <h2 class="section-title">Some Facts</h2>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+
+            <div class="facts">
+                <div class="fact">
+                    <img src="images/icons/ribon.png" alt="" class="fact-icon">
+                    <h2 class="fact-title">54</h2>
+                    <p class="fact-description">Awards Winnings</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/projects.png" alt="" class="fact-icon">
+                    <h2 class="fact-title">1458</h2>
+                    <p class="fact-description">Project Finished</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/customers.png" alt="" class="fact-icon">
+                    <h2 class="fact-title">590</h2>
+                    <p class="fact-description">Clients Worked</p>
+                </div>
+                <div class="fact">
+                    <img src="images/icons/email.png" alt="" class="fact-icon">
+                    <h2 class="fact-title">22578</h2>
+                    <p class="fact-description">Emails Send</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sponsors section below -->
+
+        <section class="sponsors">
+            <div class="sponsors-section-content">
+                <h2 class="section-title">Our Sponsors</h2>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+            </div>
+            <div class="sponsors-logo">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
+        <!-- Clients testimonial section below -->
+
+        <section class="testimonial">
+            
+        </section>
+
     </main>
 
-    <footer>
+    <!-- Footer Section Starts Here -->
 
+    <footer>
+        <div class="footer">
+            <p class="section-description">All rights reserved copyright@2023 startup landing page design</p>
+        </div>
     </footer>
 
 </body>
