only media query required

--- a/index.html
+++ b/index.html
@@ -124,21 +124,22 @@
                     </div>
                 </div>
                 <img src="images/architect.png" alt="" class="feature-list-image">
-            </div>        
+            </div>
             <div class="experience-container">
                 <div class="experience-content">
                     <h2 class="experience-title">10+Year</h2>
                     <p class="experience-description">Experience</p>
                 </div>
-            </div>  
+            </div>
         </section>
-        
+
         <!-- Some-Facts section below -->
 
         <section class="facts-section">
             <div class="facts-section-content">
                 <h2 class="section-title">Some Facts</h2>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
             </div>
 
             <div class="facts">
@@ -170,7 +171,8 @@
         <section class="sponsors">
             <div class="sponsors-section-content">
                 <h2 class="section-title">Our Sponsors</h2>
-                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+                <p class="section-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
             </div>
             <div class="sponsors-logo">
                 <img src="images/sponsors/spotify.png" alt="">
@@ -183,8 +185,30 @@
 
         <!-- Clients testimonial section below -->
 
-        <section class="testimonial">
-            
+        <section class="testimonial-section">
+            <div class="testimonial-content">
+                <h2 class="section-title">Clients Testimonials</h2>
+                <p class="section-description">Client satisfaction has always been our priority. Here are some of our
+                    client's words about our work!</p>
+            </div>
+            <div class="testimonial-container">
+                <div class="testimonials">
+                    <p class="testimony">"Without architect, we would have gone bankrupt by now. Thanks to architect,
+                        we've just launched our 5th website!"</p>
+                    <p class="client-name">- Avivah F.</p>
+                </div>
+                <div class="testimonials">
+                    <p class="testimony">"I use architect often. I was amazed at the quality of architect. Thanks for
+                        the great service."</p>
+                    <p class="client-name">- Kendall L.</p>
+                </div>
+                <div class="testimonials">
+                    <p class="testimony">"Nice work on your architect. This is simply unbelievable! I am completely
+                        blown away. This is simply unbelievable!"</p>
+                    <p class="client-name">- Florry J.</p>
+                </div>
+            </div>
+
         </section>
 
     </main>
