final commit insha Allah

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- CSS Linked Below -->
+
     <link rel="stylesheet" href="styles/style.css">
+
     <!-- Font Linked Below -->
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+
     <!-- Website title below -->
+
     <title>G3 Architects</title>
+    
 </head>
 
 <body>
@@ -53,6 +60,7 @@
     <main>
 
         <!-- Features section -->
+
         <section class="features">
             <div class="feature-images">
                 <img src="images/team1.png" alt="">
@@ -175,11 +183,11 @@
                     majority have suffered alteration.</p>
             </div>
             <div class="sponsors-logo">
-                <img src="images/sponsors/spotify.png" alt="">
-                <img src="images/sponsors/amazon.png" alt="">
-                <img src="images/sponsors/google.png" alt="">
-                <img src="images/sponsors/telerama.png" alt="">
-                <img src="images/sponsors/figma.png" alt="">
+                <img src="images/sponsors/spotify.png" alt="" class="sponsor">
+                <img src="images/sponsors/amazon.png" alt="" class="sponsor">
+                <img src="images/sponsors/google.png" alt="" class="sponsor">
+                <img src="images/sponsors/telerama.png" alt="" class="sponsor">
+                <img src="images/sponsors/figma.png" alt="" class="sponsor">
             </div>
         </section>
 
